# Web_scraping_mini_project

./: .gitignore  README.md
fastapi_mini_project/: .gitignore  .gitignore.save  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fastapi_mini_project/app/api/v1/: auth.py  diary.py  question.py  quote.py
fastapi_mini_project/app/core/: config.py  security.py
fastapi_mini_project/app/db/: database.py
fastapi_mini_project/app/main/: __init__.py
fastapi_mini_project/app/models/: __init__.py  diary.py  question.py  quote.py  user.py
fastapi_mini_project/app/repositories/: diary_repo.py  question_repo.py  quote_repo.py  user_repo.py
fastapi_mini_project/app/schemas/: diary.py  question.py  quote.py  user.py
fastapi_mini_project/app/scraping/: question_scraper.py  quote_scraper.py
fastapi_mini_project/app/services/: auth_service.py  diary_service.py  question_service.py  quote_service.py
fastapi_mini_project/migrations/models/: 0_20260311111744_init.py  1_20260311160444_add_models.py  2_20260312205816_update.py
